Proyecto2/manifiestos/manifiestos-produccion/kafka-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: harbor.HARBOR_PLACEHOLDER.nip.io/proyecto/kafka_consumer:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: harbor-cred
