Proyecto2/manifiestos/manifiestos-produccion/rabbitmq-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-consumer
  namespace: ingress-nginx 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq-consumer
  template:
    metadata:
      labels:
        app: rabbitmq-consumer
    spec:
      containers:
        - name: rabbitmq-consumer
          image: 34.69.137.65.nip.io/proyecto/rabbitmq_consumer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "75m"
              memory: "96Mi"
