Proyecto2/manifiestos/manifiestos-produccion/api-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-http-deployment
spec:
  replicas: 2  # pruebas de carga
  selector:
    matchLabels:
      app: api-http
  template:
    metadata:
      labels:
        app: api-http
    spec:
      containers:
        - name: api-http
          image: 34.69.137.65.nip.io/proyecto/api_go_http:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "75m"
              memory: "96Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-http-service
spec:
  type: ClusterIP
  selector:
    app: api-http
  ports:
    - port: 8081
      targetPort: 8081
