Proyecto2/manifiestos/manifiestos-produccion/api-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deployment
spec:
  replicas: 1  # Mínimo para HPA
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
        - name: api-rust
          image: harbor.HARBOR_PLACEHOLDER.nip.io/proyecto/api_rust:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
spec:
  type: ClusterIP
  selector:
    app: api-rust
  ports:
    - port: 8080
      targetPort: 8080
