Proyecto2/manifiestos/manifiestos-produccion/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
        - name: grpc-server
          image: harbor.HARBOR_PLACEHOLDER.nip.io/proyecto/api_go_grpc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  type: ClusterIP
  selector:
    app: grpc
  ports:
    - port: 50051
      targetPort: 50051
