Proyecto2/manifiestos/manifiestos-produccion/kafka-service-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ingress-nginx 
spec:
  type: ClusterIP
  selector:
    strimzi.io/name: kafka-cluster-kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
