Proyecto2/manifiestos/manifiestos-produccion/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: ingress-nginx 
spec:
  serviceName: "rabbitmq"
  replicas: 1 
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management 
        ports:
        - containerPort: 5672 # Puerto AMQP
        - containerPort: 15672 # Puerto de gestión web
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq # Almacenamiento persistente para los datos de RabbitMQ
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi 

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: ingress-nginx 
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
  type: ClusterIP
