Proyecto2/manifiestos/manifiestos-produccion/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
spec:
  replicas: 2
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:7.2
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "75m"
              memory: "96Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  type: ClusterIP
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
